--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_ZmFpci1iYXJuYWNsZS0yMC5jbGVyay5hY2Nvd
 
 # 数据库信息，评论系统必需
 DATABASE_HOST="aws.connect.psdb.cloud"
-DATABASE_PASSWORD="pscale_pw_HP30TdpgMItLtmHsuUDqlAPyE1yXEAWq6fOg626CwEp"
-DATABASE_URL="mysql://apa0dflugvuxsrjaecim:************@aws.connect.psdb.cloud/cali?ssl={"rejectUnauthorized":true}"
-DATABASE_USERNAME="apa0dflugvuxsrjaecim"
+DATABASE_PASSWORD="pscale_pw_cY1GaXCdiw6QnO1OrGDyCHYqVB6Upx4dsuMHS65gRZg"
+DATABASE_URL="mysql://rf3iy40o2s6mkvdafkoe:pscale_pw_cY1GaXCdiw6QnO1OrGDyCHYqVB6Upx4dsuMHS65gRZg@aws.connect.psdb.cloud/cali?ssl={"rejectUnauthorized":true}"
+DATABASE_USERNAME="rf3iy40o2s6mkvdafkoe"
 
 # 链接预览图 API 必需
 LINK_PREVIEW_API_BASE_URL=""
